--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -4,9 +4,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="day" *ngFor="let day of dayRepeater; let i = index" [ngClass]="{'gray': i < dateIndex || i > (dateIndex + todaysDate) - 1}" (click)="currentIndex = i">
-        {{day.day}}
-        <input [(ngModel)]="day.event" [hidden]="i < dateIndex || i > (dateIndex + todaysDate) - 1" type="text" *ngIf="currentIndex === i" />
+    <div class="day" *ngFor="let day of dayRepeater; let i = index" [ngClass]="{'gray': i < dateIndex || i > (dateIndex + todaysDate) - 1}" (click)="onClick(day)">
+      {{day.day}}
+        <!--<input [(ngModel)]="day.event" [hidden]="i < dateIndex || i > (dateIndex + todaysDate) - 1" type="text" *ngIf="currentIndex === i" />-->
         <div class="event">{{day.event}}</div>
     </div>
 </div>
